--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "openai>=1.102.0",
+    "pyperclip>=1.9.0",
     "ruff>=0.12.10",
 ]
