--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.10"
 dependencies = [
     "openai>=1.102.0",
     "pyperclip>=1.9.0",
+    "python-dotenv>=1.1.1",
     "ruff>=0.12.10",
 ]
