--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "raycast-script-commands"
 version = "0.1.0"
-description = "Add your description here"
+description = "Python-based Raycast script commands for productivity and automation"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
